# MetaCog-X

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONCLUSION.txt  CONTRIBUTING.md  LICENSE  MetaCog-X 完整设计方案.md  MetaCog-X 完整设计方案v3.0.md  PHASE3_CONCLUSION.md  PROBE_CONCLUSION.md  README.md  SECURITY.md  config.py  install_directml.ps1  run_diag.py  train.py  系统优化建议3.1.md
data/: __init__.py  dataset.py  hf_dataset.py  multi_step_reasoning.py
metacogx-core/: LICENSE  README.md  dilemma_detector.py  pyproject.toml  signals.py  thresholds.py  utils.py
metacogx-core/strategy/: base.py  router.py
metacogx-core/strategy/strategies/: backtrack.py  diversity.py  rerank.py
metacogx-core/tests/: test_dilemma_detector.py  test_strategies.py  test_strategy_router.py
models/: __init__.py  awareness_pool.py  cognitive_particle.py  dilemma_gate.py  dmn.py  enlightenment_trigger.py  metacogx_layer.py  metacogx_model.py  sparse_meta_controller.py  tactical_scheduler.py  triple_attention.py
paper/: paper.md
reports/: automation_report_20260614_002024.md  automation_report_20260614_002105.md  performance_report.md
runs/: _prep.py  _run_ab4.py  _run_meta.bat  ablation_dmn.py  ablation_triple_attention.py  eval.py  gpt_300.csv  inspect_model.py  metacog_300.csv  metacog_aware_only_300.csv  metacog_full_300.csv  metacog_meta_only_300.csv  probe_summary_4variants.csv  run.py  run_ab_v2.py  run_diag2.py  run_medium_train.py  summarize_ab.py  summarize_all.py  test_md5.py  train_l1_gate.py  train_l1_gate_out.txt  verify_ablation.py  verify_imitation_learning.py  (+2 more)
tests/: rt.txt  (+26 more)
(+52 files in other folders)
